--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@
 
 <div id = "element">
 
-<img src = "headshot.jpg" width=200px></img>
+<img src = "headshot.JPG" width=200px></img>
 
 <h2 style = "text-align: center"></h2>
 I am a senior at Mercer Island High School. I am a part of the Marching Band and Swim & Dive Team.
