--- a/mylife.html
+++ b/mylife.html
@@ -124,7 +124,7 @@ body {
     <img src="kath.jpg" style="width:100%">
     <img src="wake.jpg" style="width:100%">
     <img src="homecome.jpg" style="width:100%">
-    <img src="https://github.com/sophiaristuben/sristuben.github.io/blob/master/spence.JPG" style="width:100%">
+    <img src="spence.JPG" style="width:100%">
   </div>
   <div class="column">
     <img src="hinda.jpg" style="width:100%">
