--- a/mylife.html
+++ b/mylife.html
@@ -96,46 +96,46 @@ body {
   <div class="column">
     <img src="board.jpg" style="width:100%">
     <img src="amazon.jpg" style="width:100%">
-    <img src="allstate.jpg.jpg" style="width:100%">
-    <img src="andrew.jpg" style="width:100%">
+    <img src="allstate.jpg.JPG" style="width:100%">
+    <img src="andrew.JPG" style="width:100%">
     <img src="award.jpg" style="width:100%">
     <img src="boothfost.jpg" style="width:100%">
-    <img src="cesar.png" style="width:100%">
-    <img src="victoria.jpg" style="width:100%">
+    <img src="cesar.PNG" style="width:100%">
+    <img src="victoria.JPG" style="width:100%">
     <img src="proj.jpg" style="width:100%">
   </div>
   <div class="column">
-    <img src="claus.jpg" style="width:100%" >
-    <img src="smallfost.jpg" style="width:100%" >
-    <img src="fairywing.jpg" style="width:100%">
+    <img src="claus.JPG" style="width:100%" >
+    <img src="smallfost.JPG" style="width:100%" >
+    <img src="fairywing.JPG" style="width:100%">
     <img src="fooddrive.jpg" style="width:100%">
-    <img src="spacewp.jpg" style="width:100%">
-    <img src="freshas.jpg" style="width:100%">
+    <img src="spacewp.JPG" style="width:100%">
+    <img src="freshas.JPG" style="width:100%">
     <img src="syso.jpg" style="width:100%">
     <img src="whale.jpg" style="width:100%">
-    <img src="dad.jpg" style="width:100%">
+    <img src="dad.JPG" style="width:100%">
   </div>
   <div class="column">
-    <img src="marrow.jpg" style="width:100%">
+    <img src="marrow.JPG" style="width:100%">
     <img src="eden.jpg" style="width:100%">
-    <img src="iceskate.jpg" style="width:100%">
-    <img src="ikea.jpg" style="width:100%">
-    <img src="jack.jpg" style="width:100%">
-    <img src="kath.jpg" style="width:100%">
+    <img src="iceskate.JPG" style="width:100%">
+    <img src="ikea.JPG" style="width:100%">
+    <img src="jack.JPG" style="width:100%">
+    <img src="kath.JPG" style="width:100%">
     <img src="wake.jpg" style="width:100%">
-    <img src="homecome.jpg" style="width:100%">
+    <img src="homecome.JPG" style="width:100%">
     <img src="spence.JPG" style="width:100%">
   </div>
   <div class="column">
     <img src="hinda.jpg" style="width:100%">
     <img src="boat.jpg" style="width:100%">
     <img src="speaker.jpg" style="width:100%">
-    <img src="mellophone.jpg" style="width:100%">
-    <img src="nhs.jpg" style="width:100%">
-    <img src="max.jpg" style="width:100%">
-    <img src="sayers.jpg" style="width:100%">
-    <img src="ally.jpg" style="width:100%">
-    <img src="melliechace.jpg" style="width:100%">
+    <img src="mellophone.JPG" style="width:100%">
+    <img src="nhs.JPG" style="width:100%">
+    <img src="max.JPG" style="width:100%">
+    <img src="sayers.JPG" style="width:100%">
+    <img src="ally.JPG" style="width:100%">
+    <img src="melliechace.JPG" style="width:100%">
   </div>
 </div>
 
