--- a/mylife.html
+++ b/mylife.html
@@ -99,10 +99,12 @@ body {
     <img src="allstate.jpg.JPG" style="width:100%">
     <img src="andrew.JPG" style="width:100%">
     <img src="award.jpg" style="width:100%">
+     <img src="mattiehike.jpg" style="width:100%">
     <img src="boothfost.jpg" style="width:100%">
     <img src="cesar.PNG" style="width:100%">
     <img src="victoria.JPG" style="width:100%">
     <img src="proj.jpg" style="width:100%">
+    <img src="straight.jpg" style="width:100%">
   </div>
   <div class="column">
     <img src="fooddrive.jpg" style="width:100%" >
@@ -110,14 +112,17 @@ body {
     <img src="fairywing.JPG" style="width:100%">
     <img src="claus.JPG" style="width:100%">
     <img src="spacewp.JPG" style="width:100%">
+    <img src="allseniors.jpg" style="width:100%">
     <img src="freshas.JPG" style="width:100%">
     <img src="smallfost.JPG" style="width:100%">
     <img src="hinda.jpg" style="width:100%">
-    <img src="dad.JPG" style="width:100%">
+    <img src="divers.jpg" style="width:100%">
+    <img src="tuck.jpg" style="width:100%">
+    <img src="dihoco.jpg" style="width:100%">
   </div>
   <div class="column">
     <img src="marrow.JPG" style="width:100%">
-    <img src="eden.jpg" style="width:100%">
+    <img src="allseniors.jpg" style="width:100%">
     <img src="iceskate.JPG" style="width:100%">
     <img src="ikea.JPG" style="width:100%">
     <img src="jack.JPG" style="width:100%">
@@ -125,6 +130,8 @@ body {
     <img src="wake.jpg" style="width:100%">
     <img src="homecome.JPG" style="width:100%">
     <img src="speaker.jpg" style="width:100%">
+    <img src="eden.jpg" style="width:100
+    <img src="hollywood.jpg" style="width:100%">
   </div>
   <div class="column">
     <img src="whale.jpg" style="width:100%">
@@ -132,10 +139,12 @@ body {
     <img src="spence.JPG" style="width:100%">
     <img src="mellophone.JPG" style="width:100%">
     <img src="nhs.JPG" style="width:100%">
+    <img src="frhoco.jpg" style="width:100%">
     <img src="max.JPG" style="width:100%">
     <img src="sayers.JPG" style="width:100%">
     <img src="ally.JPG" style="width:100%">
     <img src="melliechace.JPG" style="width:100%">
+    <img src="windi.jpg" style="width:100%">
   </div>
 </div>
 
