--- a/mylife.html
+++ b/mylife.html
@@ -130,7 +130,7 @@ body {
     <img src="wake.jpg" style="width:100%">
     <img src="homecome.JPG" style="width:100%">
     <img src="speaker.jpg" style="width:100%">
-    <img src="eden.jpg" style="width:100
+    <img src="eden.jpg" style="width:100>
     <img src="hollywood.jpg" style="width:100%">
   </div>
   <div class="column">
