--- a/mylife.html
+++ b/mylife.html
@@ -120,7 +120,7 @@ body {
   </div>
   <div class="column">
     <img src="marrow.JPG" style="width:100%">
-    <img src="allseniors.jpg" style="width:100%">
+    <img src="diveseniors.jpg" style="width:100%">
     <img src="iceskate.JPG" style="width:100%">
     <img src="divers.jpg" style="width:100%">
     <img src="jack.JPG" style="width:100%">
@@ -131,6 +131,7 @@ body {
     <img src="eden.jpg" style="width:100>
     <img src="hollywood.jpg" style="width:100%">
     <img src="dihoco.jpg" style="width:100%">
+    <img src="micro.jpg" style="width:100%">
   </div>
   <div class="column">
     <img src="whale.jpg" style="width:100%">
