--- a/mylife.html
+++ b/mylife.html
@@ -87,6 +87,13 @@ body {
     max-width: 100%;
   }
 }
+  
+.bottom-right {
+  position: absolute;
+  bottom: 8px;
+  right: 16px;
+}
+
 </style>
 <body>
 
@@ -94,7 +101,10 @@ body {
 <!-- Photo Grid -->
 <div class="row">
   <div class="column">
+      <div class="container">
     <img src="board.jpg" style="width:100%">
+  <div class="bottom-right">Girls Who Code Graduation</div>
+</div>
     <img src="amazon.jpg" style="width:100%">
     <img src="allstate.jpg.JPG" style="width:100%">
     <img src="award.jpg" style="width:100%">
