--- a/about.html
+++ b/about.html
@@ -25,13 +25,13 @@
 <img src = "headshot.JPG" width=200px></img>
 
 <h2 style = "text-align: center"></h2>
-I am a senior at Mercer Island High School. I am a part of the Marching Band and Swim & Dive Team.
-I also am a member of Gender Equality Club, Asian Collective, Destination Imagination, Spanish Honor Society, and National Honor Society. Outside of school I am involved with the Seattle Youth Symphony
-Orchestra as a member of the Youth orchestra. I volunteer through National Charity League with organizations like JDRF and Special Olympics. I have worked as a
-Lifeguard at the Mercerwood Shore Club for two years. During the summers, I have been a counselor for Girls Rock Math (a summer camp for elementary school Girls
-to learn math) and attended the University of Washington's Fosters Women's Leaderhip Summit. I also spent two weeks playing music at Western Washington University at the
-Marrowstone Summer Festival with the Seattle Symphony. During the summers, I have also taken an interest in computer science. I learned to code with Girls Who Code, a
-seven week summer immersion program dedicated to encouraging women to code. Through Girls Who Code, I gained the skills to code this website!
+I am a freshman at Pomona College. This past semester I took the courses Principles of Macroeconomics, Calculus II, Law and Lawyers in America, and Spanish. I am really excited
+for next semester when I will take Introduction to CS, Sociocultural Antrhopology, Geology, and Microeconomics. I have also played the french horn for 8 years, and I will continue
+playing in the Pomona College Orchestra. During the summers, I have been a counselor for Girls Rock Math, a summer camp for elementary school Girls to learn math, and attended the
+University of Washington's Fosters Women's Leaderhip Summit. I also spent two weeks playing music at Western Washington University at theMarrowstone Summer Festival with the 
+Seattle Symphony. A few summers ago I took an interest in computer science. I learned to code with Girls Who Code, a seven week summer immersion program dedicated to encouraging 
+women to code. Through Girls Who Code, I gained the skills to code this website! I plan to do more software engineering in the future, and I hope to major in computer science and
+economics.
 <br>
 
 
