--- a/experience.html
+++ b/experience.html
@@ -13,7 +13,7 @@
   <li><a href = index.html> Home </a></li>
   <li><a href = about.html> About </a></li>
   <li><a href = experience.html> Experience </a></li>
-  <li><a href = mylife.html> My Life </a></li>
+  /*<li><a href = mylife.html> My Life </a></li>*/
   <li><a href = contact.html> Contact </a></li>
 </ul>
 
@@ -23,7 +23,50 @@
 <div id = "element">
 
 
+<h2 style = "text-align: center"></h2>
+<b> Girls Rock Math </b>
+<p> I spent my summer after my freshman year of college working for Girls Rock Math, a math camp for 5-11 year old girls where they learn math and do math related art 
+  projects. My role was as a Site Director, where I supervised recess, worked one on one with struggling kids, made sure all the materials were ready for each camp day, 
+  and on occassion subsituted for the camp teacher. As a woman in STEM myself, it was exciting to see so many young girls already have a passion for math, and I loved
+  getting to be a role model for our high school volunteer counselors as well. 
+<br>
+  
+<h2 style = "text-align: center"></h2>
+<b> Introduction to CS: Teacher's Assistant </b>
+<p> This semester I am working as a Teacher's Assistant for Introduction to Computer Science - Python, a course I took last year. As a TA, I attend the labs where I help the students
+  troubleshoot code, hold a weekly mentor hour where students can get help with understanding the material, and assist the professors with grading assignments. 
+<br>
+  
+<h2 style = "text-align: center"></h2>
+<b> US Census Bureau </b>
+<p> Last summer, I worked as an Enumerator for the US Census Bureau. I walked door to door in various neighborhoods in Seattle to collect Census data for those who
+  had not yet filled out the Census survery for the year.
+<br>
+  
+ <h2 style = "text-align: center"></h2>
+<b> Donor Experience Specialist </b>
+<p> Last spring, I volunteered with Bloodworks Northwest as a Donor Experience Specialist. I supervised and assisted the donors after they gave blood, and assured they were
+  safe and healthy. 
+<br>
+  
+ <h2 style = "text-align: center"></h2>
+<b> Dental Assisting </b>
+<p> Last summer, I worked as a Dental Assistant at Snoqualmie Family Dentistry. As an assistant, I sterilized tools, cleaned the rooms, welcomed patients, and aided the office
+  manager with paperwork. 
+<br>
+  
+  
+<div class = "text-block">
+<img src = "syso.jpg" width=400px></img>
+</div>
 
+<h2 style = "text-align: center"></h2>
+<b> Seattle Youth Symhony Orchestra </b>
+<p> I was a member of the Seattle Youth Symphony Orhcestra from 2014 to 2020. In SYSO I got the incredible opportunity to play with French Horn players from the Seattle 
+  Symphony as well as play amazing music. I am now playing in the Pomona College Orchestra.
+<br>
+
+  
 <div class = "text-block">
   <a href="https://www.youtube.com/watch?v=_3QSPzNwYvA&t=2s">
 <img src = "globals.jpg" width=400px></img>
@@ -33,46 +76,8 @@
 
 <h2 style = "text-align: center"></h2>
 <b> Destination Imagination </b>
-<p> Destination Imagination is a non profit organization committed to fostering the growth of STEM skills in elementary-univeristy students. As a part of DI,
-  I have had the opportunity to engineer inventions like a strong man machine and an exploding whale. DI has also taught me public speaking skills essentials
-  to who I am today. This past year, my team and I placed 4th at the Global Finals competition and received a Renaissance award for our performance that raised
-  awareness for climate change.
-<br>
-
-<div class = "text-block">
-<img src = "syso.jpg" width=400px></img>
-</div>
-
-<h2 style = "text-align: center"></h2>
-<b> Seattle Youth Symhony Orchestra </b>
-<p> I have been a part of the Seattle Youth Symphony Orchestra since 2014, starting in the lowest orchestra, Symphonette, and eventually making it into the top
-  orchestra, Youth, in 2018. Through SYSO, I have had the opportunity to expand my love of music, especially classical, and play legendary pieces including
-  Tchaikovsky's 5th Symphony and Mahler's 1st Symphony
-
-  <div class = "text-block">
-  <img src = "cert.jpg" width=400px></img>
-  </div>
-
-  <h2 style = "text-align: center"></h2>
-  <b> Girls Who Code </b>
-  <p> The summer of 2019, I participated in Girls Who Code, a 7 week summer immersion program dedicated to the growth of women in STEM and computer science. Through Girls
-    Who Code, I learned the languages Python, HTML, Arduino, and Javascript. Girls Who Code influenced my perspective of technology and all the new and unique things you
-    can apply tech to. Girls Who Code was truly life changing and I will never forget the lessons I learned and bonds I made there.
-
-  <div class = "text-block">
-  <img src = "fooddrive.jpg" width=400px></img>
-  </div>
-
-  <h2 style = "text-align: center"></h2>
-  <b> Band  </b>
-  <p> I started band in 2012 on the trumpet. After two years playing beginner trumpet, I switched to the French Horn because I thought the horn was cooler and more interesting
-    to look at. I continued band all the way through high school, and had many opportunities in high school band. In 2018 and 2019 I co-organized the Mercer Island Band Food
-    Drive where the high school and collected more than 5 tons of food each year for local charities. Running the food drive played a vital part in the importance of band
-    to me throughout high school. In 2019, the marching band also had the opportunity to march in the Tournament of Roses Parade in Pasadena. I took on the role of section
-    leader and traveled to Pasadena with the band. As a part of the band, I made many friendships with people in every grade. I made connections with athletes, Bob Ross
-    Fan Club members alike.
-
-
+<p> Destination Imagination is a non profit organization committed to fostering the growth of STEM skills in elementary-univeristy students that I participated in from 2010 
+  to 2020. As a part of DI, I had the opportunity to gain engineering, performance, and teamwork skills through the various team challenges I took on throughout the yeras.  
 <br>
 
 
