--- a/experience.html
+++ b/experience.html
@@ -55,10 +55,6 @@
   manager with paperwork. 
 <br>
   
-  
-<div class = "text-block">
-<img src = "syso.jpg" width=400px></img>
-</div>
 
 <h2 style = "text-align: center"></h2>
 <b> Seattle Youth Symhony Orchestra </b>
@@ -66,13 +62,6 @@
   Symphony as well as play amazing music. I am now playing in the Pomona College Orchestra.
 <br>
 
-  
-<div class = "text-block">
-  <a href="https://www.youtube.com/watch?v=_3QSPzNwYvA&t=2s">
-<img src = "globals.jpg" width=400px></img>
-</a>
-<h3 align = center><i>Click ↑ to watch our performance!</i></h3>
-</div>
 
 <h2 style = "text-align: center"></h2>
 <b> Destination Imagination </b>
@@ -80,6 +69,12 @@
   to 2020. As a part of DI, I had the opportunity to gain engineering, performance, and teamwork skills through the various team challenges I took on throughout the yeras.  
 <br>
 
+<div class = "text-block">
+  <a href="https://www.youtube.com/watch?v=_3QSPzNwYvA&t=2s">
+<img src = "globals.jpg" width=400px></img>
+</a>
+<h3 align = center><i>Click ↑ to watch my team's 2019 Climate Change Performance!</i></h3>
+</div>
 
 <!--<ul class = about style="list-style-type:circle">
   <li></li><br>
