--- a/about.html
+++ b/about.html
@@ -13,7 +13,6 @@
   <li><a href = index.html> Home </a></li>
   <li><a href = about.html> About </a></li>
   <li><a href = experience.html> Experience </a></li>
-  <li><a href = mylife.html> My Life </a></li>
   <li><a href = contact.html> Contact </a></li>
 </ul>
 
@@ -25,13 +24,8 @@
 <img src = "headshot.JPG" width=200px></img>
 
 <h2 style = "text-align: center"></h2>
-I am a freshman at Pomona College. This past semester I took the courses Principles of Macroeconomics, Calculus II, Law and Lawyers in America, and Spanish. I am really excited
-for next semester when I will take Introduction to CS, Sociocultural Antrhopology, Geology, and Microeconomics. I have also played the french horn for 8 years, and I will continue
-playing in the Pomona College Orchestra. During the summers, I have been a counselor for Girls Rock Math, a summer camp for elementary school Girls to learn math, and attended the
-University of Washington's Fosters Women's Leaderhip Summit. I also spent two weeks playing music at Western Washington University at theMarrowstone Summer Festival with the 
-Seattle Symphony. A few summers ago I took an interest in computer science. I learned to code with Girls Who Code, a seven week summer immersion program dedicated to encouraging 
-women to code. Through Girls Who Code, I gained the skills to code this website! I plan to do more software engineering in the future, and I hope to major in computer science and
-economics.
+Hi, I'm Sophia and I am a sophomore at Pomona College in Southern California. I am majoring in Computer Science and potentially double majoring in Media Studies. 
+Check out my experiences by clicking the experience tab on top.
 <br>
 
 
