--- a/index.html
+++ b/index.html
@@ -22,5 +22,18 @@
 <h1>Sophia Ristuben</h1>
 
 
+<p></p>
+<br>
+<!-- <a href = "find.html" class = "button" style = "position: absolute; top:420px; left: 555px"> Find Your Hike! </a> -->
+<!--
+<button onclick="document.getElementById('<h2>').innerHTML= a href = https://www.zeemee.com/jasminepan">About</button>
+-->
+<br>
+
+<!-- <img src="TakeAHikeWhite.png" alt="Logo" style="position: absolute; width:108x; height:48px; top:600px; left: 10px"> -->
+
+
+  
+  
 </body>
 </html>
