--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
 
 <div id = "element">
 
-<img src = "headshot.JPG" width=200px></img>
+<img src = "headshot.jpg" width=200px></img>
 
 <h2 style = "text-align: center"></h2>
 Hi, I'm Sophia and I am a sophomore at Pomona College in Southern California. I am majoring in Computer Science and potentially double majoring in Media Studies. 
