--- a/experience.html
+++ b/experience.html
@@ -25,14 +25,13 @@
 <h2 style = "text-align: center"></h2>
 <b> Girls Rock Math </b>
 <p> I spent my summer after my freshman year of college working for Girls Rock Math, a math camp for 5-11 year old girls where they learn math and do math related art 
-  projects. My role was as a Site Director, where I supervised recess, worked one on one with struggling kids, made sure all the materials were ready for each camp day, 
-  and on occassion subsituted for the camp teacher. As a woman in STEM myself, it was exciting to see so many young girls already have a passion for math, and I loved
-  getting to be a role model for our high school volunteer counselors as well. 
+  projects. My role was as a Site Director, where I supervised recess, worked one on one with struggling kids, made sure all the materials were ready for each camp day, manage
+  the volunteer high school counselors, and to substitue for the camp teacher. 
 <br>
   
 <h2 style = "text-align: center"></h2>
 <b> Introduction to CS: Teacher's Assistant </b>
-<p> This semester I am working as a Teacher's Assistant for Introduction to Computer Science - Python, a course I took last year. As a TA, I attend the labs where I help the students
+<p> This semester I am working as a Teacher's Assistant for Introduction to Computer Science - Python. As a TA, I attend the labs where I help the students
   troubleshoot code, hold a weekly mentor hour where students can get help with understanding the material, and assist the professors with grading assignments. 
 <br>
   
