--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
 <br>
 <!-- <a href = "find.html" class = "button" style = "position: absolute; top:420px; left: 555px"> Find Your Hike! </a> -->
 <!--
-<button onclick="document.getElementById('<h2>').innerHTML= a href = https://www.zeemee.com/jasminepan">About</button>
+/*<button onclick="document.getElementById('<h2>').innerHTML= a href = https://www.zeemee.com/jasminepan">About</button>*/
+<button onclick=" document.getElementById("power_of_javascript_demo").innerHTML = "JavaScript, you're powerful!";">About</button>
 -->
 <br>
 
