--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@
 <img src = "headshot.jpg" width=200px></img>
 
 <h2 style = "text-align: center"></h2>
-Hi, I'm Sophia and I am a sophomore at Pomona College in Southern California. I am majoring in Computer Science and potentially double majoring in Media Studies. 
+Hi, I'm Sophia and I am a sophomore at Pomona College in Southern California. I am majoring in Computer Science.
 Check out my experiences by clicking the experience tab on top.
 <br>
 
