--- a/about.html
+++ b/about.html
@@ -41,8 +41,7 @@ Check out my experiences by clicking the experience tab on top.
 <br>
 
 <!--
-<button onclick="document.getElementById('<h2>').innerHTML= a href = https://www.zeemee.com/jasminepan">About</button>
--->
+<button onclick=" document.getElementById("power_of_javascript_demo").innerHTML = "JavaScript, you're powerful!";">About</button>-->
 <br>
 <br>
 <br>
