--- a/experience.html
+++ b/experience.html
@@ -17,10 +17,40 @@
 </ul>
 
 
-<h1>Experience</h1>
-
+<h1>Experience</h1>  
+  <!-- Work experience 
+      ----------------------------------------------- -->
+      <div class="row resume-timeline">
+         <div class="col-twelve resume-header">
+            <h2>Work Experience</h2>
+         </div> <!-- /resume-header -->
+         <div class="col-twelve">
+            <div class="timeline-wrap">
+                <div class="timeline-block"> 
+                  <div class="timeline-ico">
+                     <i class="fa fa-briefcase"></i>
+                  </div>
+                  <div class="timeline-header">
+                     <h3>Consulting Solutions Start Intern</h3>
+                     <p>Jun 2022 - Aug 2022</p>
+                  </div>
+                  <div class="timeline-content">
+                     <h4><a href="https://www.pwc.com/us/en/careers/entry-level/programs-events/start.html" target="_blank">PricewaterhouseCoopers</a></h4>
+                     <p> Leveraged Alteryx to diagnose gaps in user retention and develop data-driven strategies to boost engagement. 
+                       Advised client to consolidate user profile descriptors to better connect users with one another on platform. 
+                       Generated visualizations on PowerBI to capture and illustrate user-relevant trends for four-person team and project leaders.
+                     </p>
+                  </div>
+                  
+                  
 <div id = "element">
 
+<h2 style = "text-align: center"></h2>
+<b> PriceWaterhouseCoopers CO </b>
+<p> I spent my summer after my freshman year of college working for Girls Rock Math, a math camp for 5-11 year old girls where they learn math and do math related art 
+  projects. My role was as a Site Director, where I supervised recess, worked one on one with struggling kids, made sure all the materials were ready for each camp day, manage
+  the volunteer high school counselors, and to substitue for the camp teacher. 
+<br>
 
 <h2 style = "text-align: center"></h2>
 <b> Girls Rock Math </b>
