--- a/experience.html
+++ b/experience.html
@@ -92,8 +92,7 @@
 <br>
 
 <!--
-<button onclick="document.getElementById('<h2>').innerHTML= a href = https://www.zeemee.com/jasminepan">About</button>
--->
+<button onclick=" document.getElementById("power_of_javascript_demo").innerHTML = "JavaScript, you're powerful!";">About</button>-->
 <br>
 <br>
 <br>
