--- a/resume.html
+++ b/resume.html
@@ -17,76 +17,52 @@
   <li><a href = resume.html> Resume </a></li>
 </ul>
 
-
-                  
-<div id = "element">
-
-<h2 style = "text-align: center"></h2>
-<b> PriceWaterhouseCoopers CO </b>
-<p> I spent my summer after my freshman year of college working for Girls Rock Math, a math camp for 5-11 year old girls where they learn math and do math related art 
-  projects. My role was as a Site Director, where I supervised recess, worked one on one with struggling kids, made sure all the materials were ready for each camp day, manage
-  the volunteer high school counselors, and to substitue for the camp teacher. 
-<br>
-
-<h2 style = "text-align: center"></h2>
-<b> Girls Rock Math </b>
-<p> I spent my summer after my freshman year of college working for Girls Rock Math, a math camp for 5-11 year old girls where they learn math and do math related art 
-  projects. My role was as a Site Director, where I supervised recess, worked one on one with struggling kids, made sure all the materials were ready for each camp day, manage
-  the volunteer high school counselors, and to substitue for the camp teacher. 
-<br>
-  
-<h2 style = "text-align: center"></h2>
-<b> Introduction to CS: Teacher's Assistant </b>
-<p> This semester I am working as a Teacher's Assistant for Introduction to Computer Science - Python. As a TA, I attend the labs where I help the students
-  troubleshoot code, hold a weekly mentor hour where students can get help with understanding the material, and assist the professors with grading assignments. 
-<br>
-  
-<h2 style = "text-align: center"></h2>
-<b> US Census Bureau </b>
-<p> Last summer, I worked as an Enumerator for the US Census Bureau. I walked door to door in various neighborhoods in Seattle to collect Census data for those who
-  had not yet filled out the Census survery for the year.
-<br>
-  
- <h2 style = "text-align: center"></h2>
-<b> Donor Experience Specialist </b>
-<p> Last spring, I volunteered with Bloodworks Northwest as a Donor Experience Specialist. I supervised and assisted the donors after they gave blood, and assured they were
-  safe and healthy. 
-<br>
-  
- <h2 style = "text-align: center"></h2>
-<b> Dental Assisting </b>
-<p> Last summer, I worked as a Dental Assistant at Snoqualmie Family Dentistry. As an assistant, I sterilized tools, cleaned the rooms, welcomed patients, and aided the office
-  manager with paperwork. 
-<br>
-  
-
-<h2 style = "text-align: center"></h2>
-<b> Seattle Youth Symhony Orchestra </b>
-<p> I was a member of the Seattle Youth Symphony Orhcestra from 2014 to 2020. In SYSO I got the incredible opportunity to play with French Horn players from the Seattle 
-  Symphony as well as play amazing music. I am now playing in the Pomona College Orchestra.
-<br>
-
-
-<h2 style = "text-align: center"></h2>
-<b> Destination Imagination </b>
-<p> Destination Imagination is a non profit organization committed to fostering the growth of STEM skills in elementary-univeristy students that I participated in from 2010 
-  to 2020. As a part of DI, I had the opportunity to gain engineering, performance, and teamwork skills through the various team challenges I took on throughout the yeras.  
-<br>
-
-<div class = "text-block">
-  <a href="https://www.youtube.com/watch?v=_3QSPzNwYvA&t=2s">
-<img src = "globals.jpg" width=400px></img>
-</a>
-<h3 align = center><i>Click ↑ to watch my team's 2019 Climate Change Performance!</i></h3>
+<div id="header"></div>
+<div class="left"></div>
+<div class="stuff">
+  <br><br>
+  <h1>Resume</h1>
+  <h2>Emily</h2>
+  <hr />
+  <br>
+  <p class="head">Interests</p>
+  <ul>
+    <li>Drawing</li>
+    <li>Photography</li>
+    <li>Design</li>
+    <li>Programming</li>
+    <li>Computer Science</li>
+  </ul>
+  <p class="head">Skills</p>
+  <ul>
+    <li>Web Design with HTML & CSS</li>
+  </ul>
+  <p class="head">Education</p>
+  <ul>
+    <a href="http://www.wiltonhighschool.org/pages/Wilton_High_School">
+      <li>Wilton High School</li>
+    </a>
+    <!--Link-->
+    <a href="https://www.silvermineart.org/">
+      <li>Silvermine School of Arts</li>
+    </a>
+    <li>Codeacademy</li>
+  </ul>
+  <p class="head">Experience</p>
+  <ul>
+    <li>Student Technology Intern for Wilton School District</li>
+    <li>Babysitter</li>
+  </ul>
+  <p class="head">Extracurriculars</p>
+  <ul>
+    <li>Recycling Club</li>
+    <li>Gardening Club</li>
+    <li>Book Club</li>
+  </ul>
 </div>
-
-<!--<ul class = about style="list-style-type:circle">
-  <li></li><br>
-  <li></li><br>
-  <li></li><br>
-</ul>-->
-
-</div>
+<div class="right"></div>
+<div id="footer">
+  <h2 id="name">Emily</h2></div>
 
 <p></p>
 <br>
