--- a/resume.html
+++ b/resume.html
@@ -1,46 +1,284 @@
-<div id="header"></div>
-<div class="left"></div>
-<div class="stuff">
-  <br><br>
-  <h1>Resume</h1>
-  <h2>Emily</h2>
-  <hr />
-  <br>
-  <p class="head">Interests</p>
-  <ul>
-    <li>Drawing</li>
-    <li>Photography</li>
-    <li>Design</li>
-    <li>Programming</li>
-    <li>Computer Science</li>
-  </ul>
-  <p class="head">Skills</p>
-  <ul>
-    <li>Web Design with HTML & CSS</li>
-  </ul>
-  <p class="head">Education</p>
-  <ul>
-    <a href="http://www.wiltonhighschool.org/pages/Wilton_High_School">
-      <li>Wilton High School</li>
-    </a>
-    <!--Link-->
-    <a href="https://www.silvermineart.org/">
-      <li>Silvermine School of Arts</li>
-    </a>
-    <li>Codeacademy</li>
-  </ul>
-  <p class="head">Experience</p>
-  <ul>
-    <li>Student Technology Intern for Wilton School District</li>
-    <li>Babysitter</li>
-  </ul>
-  <p class="head">Extracurriculars</p>
-  <ul>
-    <li>Recycling Club</li>
-    <li>Gardening Club</li>
-    <li>Book Club</li>
-  </ul>
-</div>
-<div class="right"></div>
-<div id="footer">
-  <h2 id="name">Emily</h2></div>
+.contOut.clearfix
+  .contIn
+    .section.top.clearfix
+      .logoCont
+        img.logo(src='http://gravatar.com/avatar/51efa933e7e70c09b613ff806e36cd85?s=512')
+      h1 Jeremy Hawes
+      .moreInfo
+        p
+          | 1060 Arcade Boulevard
+          br
+          | Sacramento, CA 95815
+          br
+          | hawes.jeremy@gmail.com
+          br
+          | (916) 216.7788
+          br
+          a(href='http://onelittledesigner.com', target='_blank') RapidWeaver Themes &amp; Stacks
+      p.tagline
+        | Front-end Developer
+        br
+        | Project Manager
+        br
+        span Web &amp; Software
+    .divider
+.contOut.clearfix
+  .contIn
+    .section.middle.clearfix
+      .job
+        h2
+          | Capitol Tech Solutions
+          i.fa.fa-minus.openBtn.open
+          span Sept 2015 - present 
+        p
+          strong Position: 
+          | Project Manager
+          br
+          strong Description: 
+          | I manage the entire process of website design and development for projects varying in scope.
+          br
+          span.brag
+            | I manage a team consisting of 12 employees and 6-10 highly skilled contractors. We develop website's for our own internal CMS including Shopify and WordPress.
+    .divider
+.contOut.clearfix
+  .contIn
+    .section.middle.clearfix
+      .job
+        h2
+          | One Little Designer (1LD)
+          i.fa.fa-plus.openBtn
+          span 2010 - present 
+        p
+          strong Position: 
+          | Project Manager & Front-end Developer
+          br
+          strong Description: 
+          | Website & Software development, design, UI and project management
+          br
+          span.brag
+            | I am one of the top developers in the RapidWeaver market where I have over 70 top selling addons and my latest work is featured as a built-in theme in their latest version (6).
+    .divider
+.contOut.clearfix
+  .contIn
+    .section.middle.clearfix
+      .job
+        h2
+          | Shoulder to Shoulder
+          i.fa.fa-plus.openBtn
+          span 2007 - 2010 
+        p
+          strong Position: 
+          | System Administrator
+          br
+          strong Description: 
+          | Maintain internal database, administration, project management, team building
+          br
+          span.brag
+            | During college I was a full-time volunteer here where our aim was to help "Prepare urban fatherless young men for life" and I helped in building the company from the ground up.
+    .divider
+.contOut.clearfix
+  .contIn
+    .section.middle.clearfix
+      .job
+        h2
+          | United States Army
+          i.fa.fa-plus.openBtn
+          span 2000 - 2006 
+        p
+          strong Position: 
+          | Administration
+          br
+          strong Description: 
+          | Logistical database modeling for transportation battalion's convoy movements
+          br
+          span.brag
+            | Developed a tracking database for logistical transportation convoy movements - used for creating accurate predictive re-deployment supply dates.
+    .divider
+.contOut.clearfix.half
+  .contIn
+    .section.middle.clearfix
+      .skills.code.odd
+        h3
+          | Code & Software
+          i.fa.fa-code
+        ul
+          li.prim JavaScript
+          li jQuery
+          li jQuery UI
+          li Angular
+          li AJAX
+          li.prim CSS
+          li CSS3
+          li Sass
+          li Scss
+          li Compass
+          li.light Bourbon
+          li.prim HTML
+          li HMTL5
+          li xhtml
+          li Jade
+          li.light Haml
+          li.light SVG
+          li.prim Database
+          li.light Ruby
+          li Ruby on Rails
+          li ASP
+          li PHP
+          li.light PostgreSQL
+          li.light MySQL
+          li.prim Platforms
+          li RapidWeaver
+          li Wix
+          li WordPress
+          li Ghost
+          li.light Tumblr
+          li.light Joomla
+          li.prim API
+          li Google Maps
+          li Google Places
+          li Facebook
+          li Pinterest
+          li Instagram
+          li.light PayPal
+          li.prim Frameworks
+          li Bootstrap
+          li Foundation
+          li Pure
+          li.prim Editors
+          li Aptana
+          li Brackets
+          li Sublime Text
+          li Codepen
+          li jsFiddle
+          li Plist Editor Pro
+          li.prim Environments
+          li Git
+          li BitBucket
+          li GitHub
+          li WAMP/MAMP
+          li.prim Graphics
+          li Photoshop
+          li Illustrator
+          li.light After Effects
+      .skills.software
+        h3
+          | Practices & Tools
+          i.fa.fa-laptop
+        ul
+          li.prim Markup
+          li Semantic/intuitive
+          li Unintrusive
+          li Uniform Indention
+          li Sparingly Complex
+          li Browser Compliance
+          li Validated
+          li SEO Compliant
+          li.prim Design
+          li Responsive
+          li Single Page Apps
+          li MVC Frameworks
+          li UI & UX
+          li Branding
+          li A/B Testing
+          li Pixel Perfect
+          li Cross-browser
+          li Touch Friendly
+          li Retina Ready
+          li Fast
+          li.prim Dev Approach
+          li Plan
+          li Modular Builds
+          li Version Control
+          li Test
+          li Debug
+          li.prim Troubleshooting
+          li StackOverflow
+          li Chrome Dev Tools
+          li.prim Project Management
+          li Asana
+          li Jira
+          li Hipchat
+          li Basecamp
+          li Slack
+          li.prim Site Optimization
+          li Google Analytics
+          li Webmaster/Console Tools
+          li Website Insight
+          li PageSpeed
+    .divider
+.contOut.clearfix
+  .contIn
+    .contracts.clearfix
+      h3 Contract Employers
+      .contract
+        h4 Internet Marketing Bar
+        p.desc
+          | User Interface (UI) design, custom WP Admin design, custom WP theme design, Dashboard & 
+          a(href="https://codepen.io/jhawes/pen/gbPrbZ", target="_blank") Email Mktg dashboard 
+          | design.
+        span.date 2014
+      .contract
+        h4 Iron Post Media
+        p.desc
+          | Custom WP theme changes & custom 
+          a(href="https://codepen.io/jhawes/pen/ujdgK", target="_blank") Google Maps polygon coordinate tool 
+          |used for real estate 
+          a(href="https://codepen.io/jhawes/pen/wBACp", target="_blank") drill-down navigation 
+          | design.
+        span.date 2014
+      .contract
+        h4 California Crane School
+        p.desc
+          | Various custom PHP & WP projects: 
+          a(href="http://californiacraneschool.com", target="_blank") CaliforniaCraneSchool.com
+          |, 
+          a(href="http://craneaccidents.com", target="_blank") CraneAccidents.com
+          |, 
+          a(href="http://cranehunter.com", target="_blank") CraneHunter.org
+          |, and more to come.
+        span.date 2011 - 2014
+      .contract
+        h4 SMUD
+        p.desc 
+          | Additions & changes to various DOM elements & stylesheets within company portal.
+          span.date 2010
+    
+.contOut.clearfix.half
+  .contIn
+    .section.middle.clearfix
+      ul.buttons
+        li
+          a(href='http://onelittledesigner.com', target='_blank') 1LittleDesigner.com
+        li
+          a(href='http://rapidweaverebook.com', target='_blank') RapidWeaverEbook.com
+        li
+          a(href='http://pure4rw.com', target='_blank') Pure4RW.com
+        li
+          a(href='http://hashtaghawes.com', target='_blank') HashtagHawes.com
+        li
+          a(href='http://papertemple.net', target='_blank') PaperTemple.net
+        li
+          a(href='http://coffeetablestudios.com', target='_blank') CoffeeTableStudios.com
+    .divider
+ul.sm
+  li
+    a(href='https://codepen.io/jhawes/')
+      i.fa.fa-codepen
+  li
+    a(href='https://twitter.com/jeremyhawes')
+      i.fa.fa-twitter
+  li
+    a(href='https://www.facebook.com/1LittleDesigner')
+      i.fa.fa-facebook
+  li
+    a(href='https://plus.google.com/+JeremyHawes/posts')
+      i.fa.fa-google-plus
+  li
+    a(href='https://www.flickr.com/photos/artbyhawes/')
+      i.fa.fa-flickr
+  li
+    a(href='http://instagram.com/haweshead/')
+      i.fa.fa-instagram
+  li
+    a(href='https://www.linkedin.com/in/jeremyhawes')
+      i.fa.fa-linkedin
